--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,96 @@
-pip~=23.0
-attrs~=22.2.0
-cryptography~=3.4.8
-Pillow~=9.0.1
-keyring~=23.5.0
-setuptools~=65.6.3
-future~=0.18.2
-requests~=2.25.1
-randomuser~=1.6
-pytest~=7.2.0
+allure-pytest==2.12.0
+allure-python-commons==2.12.0
+async-generator==1.10
+atomicwrites==1.4.1
+attrs==22.2.0
+bcrypt==3.2.0
+beautifulsoup4==4.11.1
+blinker==1.4
+certifi==2022.12.7
+chardet==4.0.0
+click==8.0.3
+colorama==0.4.4
+comments==1.0.0
+coverage==7.0.4
+cryptography==3.4.8
+dbus-python==1.2.18
+distro==1.7.0
+duplicity==0.8.21
+exceptiongroup==1.1.0
+execnet==1.9.0
+fasteners==0.14.1
+future==0.18.2
+guake==3.8.5
+h11==0.14.0
+httplib2==0.20.2
+idna==3.3
+importlib-metadata==4.6.4
+iniconfig==1.1.1
+jeepney==0.7.1
+Json-Dict==0.3.1615812759
+keyring==23.5.0
+launchpadlib==1.10.16
+lazr.restfulclient==0.14.4
+lazr.uri==1.0.6
+lockfile==0.12.2
+macaroonbakery==1.3.1
+Mako==1.1.3
+MarkupSafe==2.0.1
+monotonic==1.6
+more-itertools==8.10.0
+netifaces==0.11.0
+oauthlib==3.2.0
+olefile==0.46
+outcome==1.2.0
+packaging==22.0
+paramiko==2.9.3
+pbr==5.8.0
+pexpect==4.8.0
+Pillow==9.0.1
+pluggy==1.0.0
+protobuf==3.12.4
+ptyprocess==0.7.0
+pycairo==1.20.1
+pycups==2.0.1
+PyGObject==3.42.1
+PyJWT==2.3.0
+pymacaroons==0.13.0
+PyNaCl==1.5.0
+pyparsing==2.4.7
+pyRFC3339==1.1
+PySocks==1.7.1
+pytest==7.2.0
+pytest-check==2.0.0
+pytest-cov==4.0.0
+pytest-cover==3.0.0
+pytest-coverage==0.0
+pytest-coverage-context==0.7.0
+pytest-random-order==1.1.0
+pytest-xdist==3.1.0
+python-dateutil==2.8.1
+python-dotenv==0.21.1
+pytz==2022.1
+pyxdg==0.27
+PyYAML==5.4.1
+randomuser==1.6
+reportlab==3.6.8
+requests==2.25.1
+requests-random-user-agent==2023.2.15
+SecretStorage==3.3.1
+selenium==4.8.0
+six==1.16.0
+sniffio==1.3.0
+sortedcontainers==2.4.0
+soupsieve==2.3.2.post1
+systemd-python==234
+tomli==2.0.1
+tqdm==4.64.1
+trio==0.22.0
+trio-websocket==0.9.2
+urllib3==1.26.5
+wadllib==1.3.6
+webdriver-manager==3.8.5
+wsproto==1.2.0
+xdg==5
+xmltodict==0.13.0
+zipp==1.0.0
